ingressclassname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
  #   nginx.ingress.kubernetes.io/proxy-body-size: 4G
  namespace: default
  name: echoserver
spec:
  ingressClassName: nginx
  rules:
  - host: "echoserver.nonprod.zone.darey.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 8080
